fix page number alignment

--- a/src/components/PageView/index.css
+++ b/src/components/PageView/index.css
@@ -11,8 +11,8 @@
 .pageNumber {
   position: absolute;
   bottom: 0;
-  width: 100%;
-  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
   margin-bottom: 0.8em;
   font-size: smaller;
 }
